<resources>
    <string name="app_name">Keytronome</string>
    <string-array name="key_orders">
        <item>random</item>
    </string-array>
    <string name="order_button_title">Order</string>
    <string name="tempo_button_title">Tempo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="twofour">2/4</string>
    <string name="fourfour">4/4</string>
    <string name="threefour">3/4</string>
    <string name="sixeight">6/8</string>
    <string name="unfocusedTimeSig">#ffffff</string>
    <string name="starting_key_button_title">Starting Key</string>
    <string name="chromatic_ascending_order">ChromaticAscending</string>
    <string name="cycles_button_title">Cycles</string>
    <string name="bpm">bpm</string>
    <string name="keytronome_button_font_size">14</string>
    <string name="keytronome_play_Button_font_size">80</string>
    <string name="measure_per_key_prefix">MPK:</string>
    <string name="mpk_button_title">Measures per key:</string>
    <string name="chromatic">Chromatic</string>
    <string name="fourths">Fourths</string>
    <string name="fifths">Fifths</string>
    <string name="random">Random</string>
    <string name="wholeSteps">Whole Steps</string>
    <string name="thirds">Thirds</string>
    <string name="back_arrow">back arrow</string>
    <string name="two_four_time_signature">two four time signature</string>
    <string name="four_four_time_signature">four four time signature</string>
    <string name="three_four_time_signature">three four time signature</string>
    <string name="six_eight_time_signature">six eight time signature</string>
    <string name="order_button_prefix">Starting from \  </string>
    <string name="ready">Ready...</string>
    <string name="save">Save</string>
    <string name="Load">Load</string>
    <string name="sign_in_dialog">sign in dialog</string>
    <string name="save_dialog_title">Save Preset</string>
    <string name="preset_name">preset name</string>
    <string name="cancel">cancel</string>
    <string name="save_hint">Enter preset name</string>
    <string name="no_preset">No preset</string>
    <string name="Login">login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="share_the_love">Share the love!</string>
</resources>