<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00000000"
    tools:context=".ui.fragments.SaveFragment">

    <ImageView
        android:contentDescription="@string/back_arrow"
        android:id="@+id/backArrowTs"
        android:layout_width="match_parent"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="50dp"
        android:src="@drawable/back_arrow_white"
        />

    <Button
        android:id="@+id/savePresetButton"
        android:layout_width="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/button_style"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backArrowTs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loadButton"
        android:text="@string/save"/>

    <Button
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:paddingHorizontal="15dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/button_style"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/savePresetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/Load"/>

</androidx.constraintlayout.widget.ConstraintLayout>